[tool.poetry]
name = "nonebot-plugin-analysis-bilibili"
version = "2.6.0"
description = "nonebot2解析bilibili插件"
authors = ["mengshouer"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/mengshouer/nonebot_plugin_analysis_bilibili"
keywords = ["nonebot", "nonebot2", "bilibili"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = { version = "^2.0.0-beta.1", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
